--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Jesse Chavez – Linux Portfolio</title>
+  <title>Jesse – Linux Portfolio</title>
   <style>
     body {
       font-family: system-ui, sans-serif;
